force-app/main/default/objects/Field_Dependency_Config__mdt/Field_Dependency_Config__mdt.object-meta.xml
<CustomObject>
    <label>Field Dependency Config</label>
    <pluralLabel>Field Dependency Configs</pluralLabel>
</CustomObject>