force-app/main/default/objects/Field_Dependency_Config__mdt/fields/Level_1_Field__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Field__c</fullName>
    <label>Level 1 Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>