force-app/main/default/objects/Field_Dependency_Config__mdt/fields/Level_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Value__c</fullName>
    <label>Level 1 Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>