force-app/main/default/objects/Field_Dependency_Config__mdt/fields/Level_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Value__c</fullName>
    <label>Level 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>