force-app/main/default/objects/Field_Dependency_Config__mdt/fields/Level_3_Field__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Field__c</fullName>
    <label>Level 3 Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>