force-app/main/default/objects/Field_Dependency_Config__mdt/fields/Level_3_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Value__c</fullName>
    <label>Level 3 Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>